--- a/demo.html
+++ b/demo.html
@@ -42,6 +42,9 @@
 	</head>
 	<body>
 		<h1>Unencumbered &lt;line-numbers&gt; Web Component</h1>
+
+		<p>Back to the <a href="https://github.com/zachleat/line-numbers">source code on GitHub</a>.</p>
+
 		<p>A very light left and right border has been added to the &lt;body&gt; element to demonstrate obtrusive versus unobtrusive behavior.</p>
 
 		<h2>&lt;pre&gt;</h2>
