Adds another demo

--- a/demo.html
+++ b/demo.html
@@ -184,6 +184,20 @@ this is getting longer
 this is getting longer</pre>
 		</line-numbers>
 
+		<h3><code>&lt;pre&gt;</code> with vertical overflow and <code>overscroll-behavior</code></h3>
+
+		<line-numbers>
+			<pre style="max-height: 6em; overflow: auto; overscroll-behavior: contain;"># Hello {{ subject }}
+
+line
+another line
+
+
+this is getting longer
+
+this is getting longer</pre>
+		</line-numbers>
+
 		<h2>&lt;textarea&gt;</h2>
 		<h3>&lt;textarea&gt; with vertical overflow</h3>
 
