Adds obtrusive to overscroll behavior demo

--- a/demo.html
+++ b/demo.html
@@ -186,7 +186,7 @@ this is getting longer</pre>
 
 		<h3><code>&lt;pre&gt;</code> with vertical overflow and <code>overscroll-behavior</code></h3>
 
-		<line-numbers>
+		<line-numbers obtrusive>
 			<pre style="max-height: 6em; overflow: auto; overscroll-behavior: contain;"># Hello {{ subject }}
 
 line
