--- a/demo.html
+++ b/demo.html
@@ -17,7 +17,7 @@
 			font-family: system-ui, sans-serif;
 			max-width: 40em;
 			margin: 0 auto;
-			padding-bottom: 10em;
+			padding: 0 0 10em 2em;
 			line-height: 1.5;
 			border: 1px solid #eee;
 		}
