Make a few demos obtrusive

--- a/demo.html
+++ b/demo.html
@@ -158,7 +158,7 @@ this is getting longer</pre>
 		<h3>Change the counter type</h3>
 		<h4>Leading zero</h4>
 
-		<line-numbers style="--uln-number-type: decimal-leading-zero">
+		<line-numbers obtrusive style="--uln-number-type: decimal-leading-zero">
 			<pre style=""># Hello {{ subject }}
 
 line
@@ -172,7 +172,7 @@ this is getting longer</pre>
 
 		<h4>Upper roman</h4>
 
-		<line-numbers style="--uln-number-type: upper-roman">
+		<line-numbers obtrusive style="--uln-number-type: upper-roman">
 			<pre style=""># Hello {{ subject }}
 
 line
@@ -184,7 +184,7 @@ this is getting longer
 this is getting longer</pre>
 		</line-numbers>
 
-		<h3><code>&lt;pre&gt;</code> with vertical overflow and <code>overscroll-behavior</code></h3>
+		<!-- <h3><code>&lt;pre&gt;</code> with vertical overflow and <code>overscroll-behavior</code></h3>
 
 		<line-numbers obtrusive>
 			<pre style="max-height: 6em; overflow: auto; overscroll-behavior: contain;"># Hello {{ subject }}
@@ -196,7 +196,7 @@ another line
 this is getting longer
 
 this is getting longer</pre>
-		</line-numbers>
+		</line-numbers> -->
 
 		<h2>&lt;textarea&gt;</h2>
 		<h3>&lt;textarea&gt; with vertical overflow</h3>
