Explain what obtrusive behavior is

--- a/demo.html
+++ b/demo.html
@@ -45,7 +45,7 @@
 
 		<p>Back to the <a href="https://github.com/zachleat/line-numbers">source code on GitHub</a>.</p>
 
-		<p>A very light left and right border has been added to the &lt;body&gt; element to demonstrate obtrusive versus unobtrusive behavior.</p>
+		<p>A very light left and right border has been added to the &lt;body&gt; element to demonstrate obtrusive (the numbers intrude on and shrink the original content) versus unobtrusive behavior.</p>
 
 		<h2>&lt;pre&gt;</h2>
 		<line-numbers>
