Clarity on unwrapped demo

--- a/demo.html
+++ b/demo.html
@@ -255,7 +255,7 @@ this is getting longer
 this is getting longer</textarea>
 		</line-numbers>
 
-		<h2>Upgrade unwrapped content</h2>
+		<h2>Upgrade unwrapped elements</h2>
 		<script type="module">
 		let btn = document.getElementById("upgrade-content");
 		btn.addEventListener("click", () => {
@@ -268,7 +268,7 @@ this is getting longer</textarea>
 		</script>
 
 		<form>
-			<button type="button" id="upgrade-content">Upgrade &lt;pre&gt;</button>
+			<button type="button" id="upgrade-content">Upgrade</button>
 		</form>
 
 		<pre style="height: 6em;"># Hello {{ subject }}
